--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 body{
     font-family: 'Pacifico', cursive;
-    
     background-color: lightgrey;
 }
 .container{
-    background-color:rgb(188, 173, 230);
+    background-color:rgb(188, 173, 230);    
 }
 
 h1{
@@ -19,4 +18,14 @@ form {
     height: 50px;
     width: 250px;
     text-align: center;
+}
+
+button {
+    color: white;
+    background-color: #8A2BE2;
+}
+
+.button:hover{
+    color:#8A2BE2;
+    background-color: white;
 }
