--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 body{
     font-family: 'Pacifico', cursive;
-    background-color: lightgrey;
+    background-color: #8A2BE2;
+    margin-top: 12.5%;
 }
+
 .container{
     background-color:rgb(188, 173, 230);    
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 h1{
